When mature, changes should be merged into master *as a merge commit*  and this changelog file updated.

In the following text, the tag "USER" indicates a significant change that will impact user experience in some way.
The tag "DEVELOPER" indicates a change that significantly impacts the code but is likely not visible to the user.

11th August
- USER (DEV) - Add the ability move Z stage up and down with R and F in addition to Q and E. 
6th August 
Minor bug fixes and doc changes
- USER (Dev) - Compatibility bug fixes for SI Basic 2021.


1st July
- USER (Dev) - Improve behavior of zoom buttons and box buttons in acq view. Includes bug fixes.
- USER (Dev) - The ROI that was last drawn by the user is painted temporarily onto the imaged area. 

21st June 2021
- Show relative motion increment in slicing debug message and correctly display the current z depth (bugfix)


18th June 2021
- USER (Dev) - If PMT Auto-On is enabled, the acquisition will not proceed.

17th June 2021
- USER (Dev) - Bugfix: Correct slow start on Bake
- USER (Dev) - New default settings in system settings file are now automatically added to the live file. A backup of the original live file is created.
- New option added to system settings file: defaultYcutPos. This allows the vibratime to be mounted off-centre
 with respect to objective. Useful for some water baths.
- USER (Dev) - Option to set dominant stage tiling direction. To date X was dominant. Now Y is default. NOTE: User should also update StitchIt!

4th May 2021
- USER - All trim slices now start from the cutting start point. This seems more like the expected behavior
- Bugfix - Attempt to trap error that is causing acquisition to crash if there is only one row or column of
           tiles near the the end of a sample. Acquisition will just end at this point. The assumption being
           that it is complete. This is not a perfect solution but it's serviceable for now.


3nd May 2021