@@ -134,7 +134,7 @@ classdef recipe < handle
         % These properies are set via methods of BT, not directly by the user.
         % They are used for determining where to image and where to cut and aren't 
         % relevant beyond this. Cutting and imaging won't be possible until these are set to reasonable values. 
-        CuttingStartPoint=struct('X',0, 'Y',0)   % Start location for cutting
+        CuttingStartPoint=struct('X',NaN, 'Y',0)   % Start location for cutting
         FrontLeft=struct('X',0, 'Y',0)           % Front/left position of the tile array
 
 
