@@ -6,6 +6,11 @@ When mature, changes should be merged into master *as a merge commit*  and this 
 In the following text, the tag "USER" indicates a significant change that will impact user experience in some way.
 The tag "DEVELOPER" indicates a change that significantly impacts the code but is likely not visible to the user.
 
+24th August
+- USER (DEV) - Cutting start point is set to NaN on startup and when a new sample created. System will not cut until it's set. 
+- USER (DEV) - Default sample name is now the microscope ID. 
+- USER (DEV) - Warning issued if the tile size in BakingTray does not match that in ScanImage.
+
 11th August
 - USER (DEV) - Add the ability move Z stage up and down with R and F in addition to Q and E. 
 6th August 
